--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ header .column{
     text-align: right;
 }
 #carousel{
-    margin-top:5%;
+    width: 100%;
 }
 #address-form{
     display: none;
@@ -20,9 +20,11 @@ header .column{
 }
 .product-card img{
     height:auto;
+    margin:auto;
 }
 .product-body h5{
     height: 50px;
+    
 }
 table, th, td {
     border: 1px solid black;
@@ -33,3 +35,16 @@ th{
 #checkout-button{
     background-color: gray;
 }
+
+/* .page-sidebar {
+   position: fixed;
+    
+}  */
+.btn-group-vertical{
+    margin-top: 10px;
+    position: fixed;
+ } 
+.btn-group-vertical.btn{
+    margin: 10px 10px;
+ } 
+
